fix collector list